--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
 
 html,
 body,
-#root,
-.app {
+#root{
   height: 100%;
   width: 100%;
   font-family: "Rubik", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
